[tool.poetry]
name = "volttron-openadr-ven"
version = "1.0.0"
description = "A Volttron agent that acts as a Virtual End Node (VEN) within the OpenADR 2.0b specification."
authors = ["Mark Bonicillo <mark.bonicillo@pnnl.gov>"]
license = "Apache-2.0"
maintainers = ["Volttron Team <volttron@pnnl.gov>"]
readme = "README.md"
homepage = "https://github.com/VOLTTRON/volttron-openadr-ven"
repository = "https://github.com/VOLTTRON/volttron-openadr-ven"
packages = [
    { include = "volttron_openadr_ven" }
]
keywords = ["volttron", "agent", "openadr", "application"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Home Automation",
    "Topic :: Software Development :: Embedded Systems",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9"
]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.5b2"
mypy = "^0.812"
pre-commit = "^2.13.0"
volttron-client = "^0.3.8"
openleadr = "^0.5.24"

[tool.poetry.scripts]
volttron_openadr_ven="volttron_openadr_ven.agent:main"

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/VOLTTRON/volttron-openadr-ven/issues"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
Sphinx = "^4.4.0"
pytest-cov = "^3.0.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/'''
