[metadata]
name = volttron-openadr-ven
description = OpenAdr VEN Implementation
description-file = README.md
description-content-type = text/markdown
author = The VOLTTRON Team
author-email = volttron@pnnl.gov
license = Apache 2
keywords = volttron, iot platform, building automation, ADR, openadr, Automated Demand Response
project_urls =
  Bug Reports = https://github.com/VOLTTRON/volttron-openadr-ven/issues
  Source = https://github.com/VOLTTRON/volttron-openadr-ven/

# Classifiers help users find your project by categorizing it.
#
# For a list of valid classifiers, see https://pypi.org/classifiers/
classifiers=
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    Development Status :: 3 - Alpha
    # Indicate who your project is intended for
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    # Pick your license as you wish
    License :: OSI Approved :: Apache Software License
    # Specify the Python versions you support here. In particular, ensure
    # that you indicate whether you support Python 2, Python 3 or both.
    # These classifiers are *not* checked by 'pip install'. See instead
    # 'python_requires' below.
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[files]
packages =
  volttron_openadr_ven

;[entry_points]
;console_scripts =
;    volttron = volttron.server.__main__:main

